syntax = "proto3";

option go_package = "github.com/aloknerurkar/msuite-services/payments/pb";
package payments;

enum Currency {
    RESERVED = 0;
    AFN = 1;
    ALL = 2;
    AMD = 3;
    ANG = 4;
    ARS = 5;
    AUD = 6;
    AWG = 7;
    AZN = 8;
    BAM = 9;
    BBD = 10;
    BGN = 11;
    BHD = 12;
    BMD = 13;
    BND = 14;
    BOB = 15;
    BRL = 16;
    BSD = 17;
    BWP = 18;
    BYN = 19;
    BYR = 20;
    BZD = 21;
    CAD = 22;
    CLP = 23;
    CNY = 24;
    COP = 25;
    CRC = 26;
    CUP = 27;
    CZK = 28;
    DKK = 29;
    DOP = 30;
    DZD = 31;
    EEK = 32;
    EGP = 33;
    EUR = 34;
    FJD = 35;
    FKP = 36;
    GBP = 37;
    GGP = 38;
    GHC = 39;
    GIP = 40;
    GTQ = 41;
    GYD = 42;
    HKD = 43;
    HNL = 44;
    HRK = 45;
    HUF = 46;
    IDR = 47;
    ILS = 48;
    IMP = 49;
    INR = 50;
    IQD = 51;
    IRR = 52;
    ISK = 53;
    JEP = 54;
    JMD = 55;
    JOD = 56;
    JPY = 57;
    KES = 58;
    KGS = 59;
    KHR = 60;
    KPW = 61;
    KRW = 62;
    KWD = 63;
    KYD = 64;
    KZT = 65;
    LAK = 66;
    LBP = 67;
    LKR = 68;
    LRD = 69;
    LTL = 70;
    LVL = 71;
    LYD = 72;
    MAD = 73;
    MKD = 74;
    MNT = 75;
    MUR = 76;
    MXN = 77;
    MWK = 78;
    MYR = 79;
    MZN = 80;
    NAD = 81;
    NGN = 82;
    NIO = 83;
    NOK = 84;
    NPR = 85;
    NZD = 86;
    OMR = 87;
    PAB = 88;
    PEN = 89;
    PHP = 90;
    PKR = 91;
    PLN = 92;
    PYG = 93;
    QAR = 94;
    RON = 95;
    RSD = 96;
    RUB = 97;
    RUR = 98;
    SAR = 99;
    SBD = 100;
    SCR = 101;
    SEK = 102;
    SGD = 103;
    SHP = 104;
    SOS = 105;
    SRD = 106;
    SVC = 107;
    SYP = 108;
    THB = 109;
    TND = 110;
    TRL = 111;
    TRY = 112;
    TTD = 113;
    TWD = 114;
    TZS = 115;
    UAH = 116;
    UGX = 117;
    AED = 118;
    UYU = 119;
    UZS = 120;
    VEF = 121;
    VND = 122;
    XCD = 123;
    YER = 124;
    ZAR = 125;
    ZMW = 126;
    ZWD = 127;
    USD = 128;
}

enum ProviderId {
    PROVIDER_RESERVED = 0;
    RAZORPAY_FE = 1;
}

enum ChargeStatus {
    CHARGE_RESERVED = 0;
    PAID = 1;
    // Refunded type includes failure in payment processing.
    REFUNDED = 2;
}

message Charge {
    string charge_id = 1;
    ProviderId provider = 2;
    Currency currency = 3;
    oneof Source {
        string user_id = 4;
        Card card = 5;
        string voucher_id = 6;
    }
    int64 charge_amount = 7;
    int64 refund_amount = 8;
    ChargeStatus status = 9;
    string provider_ref = 10;
    repeated Refund refund_info = 11;
    string email = 12;
    string statement = 13;
    map<string, string> meta = 14;
    int64 created = 98;
    int64 updated = 99;
}

message Refund {
    enum RefundType {
        REFUND_RESERVED = 0;
        PROVIDER_FAILURE = 1;
        USER_REQUESTED = 2;
        SERVER_ERROR = 3;
        FRAUD = 4;
        DUPLICATE = 5;
    }
    RefundType type = 1;
    string refund_id = 2;
    int64 refund_amount = 3;
    string provider_ref = 4;
    int64 created = 98;
    int64 updated = 99;
}

enum CardType {
    CARD_RESERVED = 0;
    MASTERCARD = 1;
    VISA = 2;
    AMEX = 3;
    JCB = 4;
    DISCOVER = 5;
    DINERS_CLUB = 6;
}

message Card {
    string card_number = 1;
    string expire_month = 2;
    string expire_year = 3;
    string first_name = 4;
    string last_name = 5;
    string cvc = 6;
    CardType type = 7;
}

message ChargeReq {
    ProviderId provider = 1;
    Currency currency = 2;
    int64 amount = 3;
    oneof Source {
        string user_id = 4;
        Card card = 5;
        string voucher_id = 7;
    }
    string email = 8;
    string statement = 9;
    map<string, string> meta = 10;
}

message RefundReq {
    string charge_id = 1;
    Refund.RefundType type = 2;
    int64 amount = 3;
    Currency currency = 4;
    string provider_ref = 5;
}

message Charges {
    repeated Charge charges = 1;
}

message IDs {
   repeated string vals = 1;
}

message ListReq {
   int64 page = 1;
   int64 limit = 2;
   Sort sort = 3;
   int64 version = 4;
   enum Sort {
      Natural = 0;
      CreatedDesc = 1;
      CreatedAsc = 2;
      UpdatedDesc = 3;
      UpdatedAsc = 4;
   }
}

service Payments {
    rpc NewCharge(ChargeReq) returns (Charge) {}
    rpc RefundCharge(RefundReq) returns (Refund) {}
    rpc Get(IDs) returns (Charges) {}
    rpc List(ListReq) returns (Charges) {}
}
